--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -28,6 +28,7 @@
           <ion-input type="password" formControlName = "password" ></ion-input>
         </ion-item>
       </ion-list>
+      <button ion-button (click) = "logintoUser()">Login</button>
     </form>
   </ion-grid>
 </ion-content>
