--- a/src/pages/show-ticket/show-ticket.html
+++ b/src/pages/show-ticket/show-ticket.html
@@ -19,7 +19,7 @@
     <ion-list >
       <ion-item *ngFor="let tickets of pendingTickets" (click)="pressedTickets(tickets.ticketNumber)" >
         Ticket number: {{tickets.ticketNumber}}
-        Ticket Priority: {{priority}}
+        Ticket Priority: {{tickets.priorityVal}}
         Ticket Description: {{tickets.ticketDescription}}
         Ticket Owner: {{tickets.fullName}}
       </ion-item>
