set up the modal Page for createTicket

--- a/src/pages/create-ticket/create-ticket.html
+++ b/src/pages/create-ticket/create-ticket.html
@@ -8,6 +8,9 @@
 
   <ion-navbar>
     <ion-title>createTicket</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click) = "closeModal()"><ion-icon name="close"></ion-icon></button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
