--- a/src/pages/show-ticket/show-ticket.html
+++ b/src/pages/show-ticket/show-ticket.html
@@ -24,5 +24,7 @@
         Ticket Owner: {{tickets.fullName}}
       </ion-item>
     </ion-list>
+
+    <button ion-button (click) = "createTicketButton()">+</button>
   </ion-grid>
 </ion-content>
