update ticket modal created

--- a/src/pages/update-tickets/update-tickets.html
+++ b/src/pages/update-tickets/update-tickets.html
@@ -8,7 +8,9 @@
 
   <ion-navbar>
     <ion-title>updateTickets</ion-title>
-  </ion-navbar>
+    <ion-buttons end>
+        <button ion-button icon-only (click) = "closeModal()"><ion-icon name="close"></ion-icon></button>
+      </ion-buttons>  </ion-navbar>
 
 </ion-header>
 
