show ticket ui updated

--- a/src/pages/create-ticket/create-ticket.html
+++ b/src/pages/create-ticket/create-ticket.html
@@ -56,7 +56,7 @@
             </ion-item>
 
         </form>
-        <button ion-button (click) = "createnewTickets()"></button>
+        <button ion-button (click) = "createnewTickets()">Create Ticket</button>
     </ion-list>
   </ion-grid>
 </ion-content>
