--- a/src/pages/update-tickets/update-tickets.html
+++ b/src/pages/update-tickets/update-tickets.html
@@ -55,7 +55,7 @@
                 </ion-item>
     
             </form>
-            <button ion-button (click) = "updateTicket()"></button>
+            <button ion-button (click) = "updateTicket()">Update Ticket</button>
         </ion-list>
       </ion-grid>
 </ion-content>
